fix cors issue final